# imageproc

./: CMakeLists.txt  README.md
include/: imageproc.h  rawimage.h
src/: CMakeLists.txt  rawimage.cc  rotation.cc  rotation_fix_point.cc  sigma_filter.cc
test/: CMakeLists.txt  test.cc
